refactor commands in game